<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_margin="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/img_user"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/white"
        android:src="@drawable/ic_launcher_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_user"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:id="@+id/ll"
        >

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextContent.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:paddingRight="3dp"
            android:text="@string/name"
            android:ellipsize="end"
            android:lines="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_username"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:text="@string/username" />
    </LinearLayout>

    <TextView

        style="@style/TextContent.Subtitle"
        android:layout_marginTop="3dp"
        android:layout_below="@id/ll"
        android:layout_toEndOf="@+id/img_user"
        android:id="@+id/tv_item_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/company" />


</RelativeLayout>